<resources>
    <string name="app_name">Kalkilatris</string>
    
    <string name="displayHint">Antre yon valè</string>
    <string name="zero">0</string>
    <string name="un">1</string>
    <string name="deux">2</string>
    <string name="trois">3</string>
    <string name="quatre">4</string>
    <string name="cinq">5</string>
    <string name="six">6</string>
    <string name="sept">7</string>
    <string name="huit">8</string>
    <string name="neuf">9</string>

    <string name="retour"> </string>
    <string name="parenOuvert">(</string>
    <string name="parenFerme">)</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="addition">+</string>
    <string name="soustraction">-</string>
    <string name="division">/</string>
    <string name="multipli">x</string>
    <string name="egal">=</string>
    <string name="point">.</string>


</resources>