<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/displayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/displayHint"
        android:textColorHint="@color/white"
        android:background="@color/jauneAbricot"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginBottom="0dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textEnd"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="end" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="12dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/parenOuvertBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@color/grisPal"
                android:onClick="parenOuvertBtnPress"
                android:text="@string/parenOuvert"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/parenFermeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@color/grisPal"
                android:onClick="parenFermeBtnPress"
                android:text="@string/parenFerme"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@color/grisPal"
                android:onClick="zeroBtnPress"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/retour"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@color/jauneAbricot"
                android:contentDescription="@string/retour"
                android:onClick="retourBtnPress"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:srcCompat="@drawable/retour" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/septBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/numbersquare"
                android:onClick="septBtnPress"
                android:text="@string/sept"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/huitBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/numbersquare"
                android:onClick="huitBtnPress"
                android:text="@string/huit"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/neufBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/numbersquare"
                android:onClick="neufBtnPress"
                android:text="@string/neuf"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/square"
                android:onClick="adBtnPress"
                android:text="@string/addition"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/quatreBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/numbersquare"
                android:onClick="quatreBtnPress"
                android:text="@string/quatre"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/cinqBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/numbersquare"
                android:onClick="cinqBtnPress"
                android:text="@string/cinq"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sixBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/numbersquare"
                android:onClick="sixBtnPress"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sousBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/square"
                android:onClick="sousBtnPress"
                android:text="@string/soustraction"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/unBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/numbersquare"
                android:onClick="unBtnPress"
                android:text="@string/un"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/deuxBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/numbersquare"
                android:onClick="deuxBtnPress"
                android:text="@string/deux"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/troisBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/numbersquare"
                android:onClick="troisBtnPress"
                android:text="@string/trois"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/multiBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/square"
                android:onClick="mulBtnPress"
                android:text="@string/multipli"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/cosBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@color/grisPal"
                android:onClick="cosBtnPress"
                android:text="@string/cos"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sinBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@color/grisPal"
                android:onClick="sinBtnPress"
                android:text="@string/sin"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/pointBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/numbersquare"
                android:onClick="pointBtnPress"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/divBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/square"
                android:onClick="divBtnPress"
                android:text="@string/division"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/egalBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="@color/jauneAbricot"
                android:onClick="egalBtnPress"
                android:text="@string/egal"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="279dp"
        app:layout_constraintBottom_toTopOf="@+id/displayEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:mipmap/sym_def_app_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>